[package]
name = "easytiming"
version = "0.0.5"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
description = "Utilities for easy timing functions, code blocks, etc"
keywords = ["timing"]
documentation = "https://docs.rs/easytiming"
repository = "https://gitlab.com/imp/easytiming-rs.git"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["date-and-time", "development-tools::profiling", "development-tools::debugging"]

[badges]
gitlab = { repository = "imp/easytiming-rs" }
travis-ci = { repository = "imp/easytiming-rs" }

[dependencies]
log = { version = "0.3", optional = true }
slog = { version = "2.0", optional = true }
